--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <h1> Les recettes a Popa </h1>
+    <img src="popa.jpg" alt="Photo du tablier a popa" width="300">
+    <p></p>
+    <a href="recipes/pate-chinois.html">Pate chinois vegane</a>
 </body>
 </html>
